@@ -15,4 +15,4 @@ SYMBOL TABLE:
 Contents of section \.text:
  0000 e3fd0001                             .*
 Contents of section \.data:
- 0200 00000004 00000005 00000006           .*
+ 2000000000000200 00000004 00000005 00000006           .*
