@@ -25,5 +25,5 @@ SYMBOL TABLE:
 Contents of section \.text:
  0000 e3fd0001                             .*
 Contents of section \.data:
- 0008 20000000 00000008                    .*
+ 2000000000000008 20000000 00000008                    .*
 Contents of section \.sbss:
