@@ -17,10 +17,10 @@ Idx Name          Size      VMA               LMA               File off  Algn
 Contents of section \.text:
  0100 e3fd0001                             .*
 Contents of section \.other:
- 0000 00000001 00000002 00000003 00000004  .*
- 0010 ffffffff fffff827 50000000 0000000a  .*
- 0020 00000009 00000008 00000007 25272900  .*
- 0030 00030d41 000186a2 26280000 00000000  .*
- 0040 00000000 0087a238 00000000 302a55a8  .*
+ 1000000000000000 00000001 00000002 00000003 00000004  .*
+ 1000000000000010 ffffffff fffff827 50000000 0000000a  .*
+ 1000000000000020 00000009 00000008 00000007 25272900  .*
+ 1000000000000030 00030d41 000186a2 26280000 00000000  .*
+ 1000000000000040 00000000 0087a238 00000000 302a55a8  .*
 Contents of section \.data:
- 0004 0000012c                             .*
+ 2000000000000004 0000012c                             .*
