@@ -25,14 +25,14 @@ Idx Name[ ]+Size[ ]+VMA[ ]+LMA[ ]+File off  Algn
 Contents of section \.text:
  0000 e3fd0001[ ]+.*
 Contents of section \.di:
- 0000 2a000000 00000000 00000000 00000000  .*
+ 2000000000000000 2a000000 00000000 00000000 00000000  .*
 #...
- 7ff0 00000000 00000000 00000000 2b2c0000  .*
+ 2000000000007ff0 00000000 00000000 00000000 2b2c0000  .*
 #...
- fff0 00000000 00000000 00002d2e 00000000  .*
+ 200000000000fff0 00000000 00000000 00002d2e 00000000  .*
 #...
- 17ff0 00000000 00000000 002f3000 00000000  .*
+ 2000000000017ff0 00000000 00000000 002f3000 00000000  .*
 #...
- 1fff0 00000000 00000000 00313200 00000000  .*
+ 200000000001fff0 00000000 00000000 00313200 00000000  .*
 #...
- 27ff0 00000000 00000000 000033[ ]+.*
+ 2000000000027ff0 00000000 00000000 000033[ ]+.*
