@@ -18,11 +18,11 @@
 .*:     file format mmo
 
 Contents of section \.text:
- 0000 e3fd0001 2a000000 00000000 00000000  .*
+ 00000 e3fd0001 2a000000 00000000 00000000  .*
 #...
- 7ff0 00000000 00000000 00000000 2b2c0000  .*
+ 07ff0 00000000 00000000 00000000 2b2c0000  .*
 #...
- fff0 00000000 00000000 00002d00 00000000  .*
+ 0fff0 00000000 00000000 00002d00 00000000  .*
  10000 00000000 00000000 0000002e 2f303132  .*
  10010 33000000 00000000 00000000 00000000  .*
  10020 00300000 00000000 00000000 00000000  .*
